commitment titles spacing fix for mobile

--- a/apsc-collab-css/partials/_grid.scss
+++ b/apsc-collab-css/partials/_grid.scss
@@ -38,8 +38,7 @@
     height:100px;
     @media only screen and (max-width: $break-mobile) {
         height:270px;
-        margin-top:10%;
-        margin-bottom: 10%;
+        margin-top:7%;
     }
 }
 .commitment-title{
